@@ -2,6 +2,7 @@ def recipes; @recipes end
 def recipe?(name); @recipes.include?(name) end
 def prefs; @prefs end
 def prefer(key, value); @prefs[key].eql? value end
+def gems; @gems end
 
 def say_custom(tag, text); say "\033[1m\033[36m" + tag.to_s.rjust(10) + "\033[0m" + "  #{text}" end
 def say_recipe(name); say "\033[1m\033[36m" + "recipe".rjust(10) + "\033[0m" + "  Running #{name} recipe..." end
